# bd-spindle1

./: Cargo.toml  README.md  cylinder_inner1.00_outer1.45_height20.00_segments40.stl  spindle.inner0.50_outer0.75_height20.00_segments40.stl  spindle1.dot_diameter1.00_dot_spacing2.30_spindle_height20.00_segments40.stl
src/: main.rs
