[package]
name = "bd-spindle1"
version = "0.1.0"
edition = "2021"

# Using --features csgrs-local will use the csgrs crate in the local directory
# Using --features csgrs-git will use the csgrs crate from github
[features]
default = ["csgrs"]
local = ["csgrs-local"]
git = ["csgrs-git"]

[dependencies]
csgrs = { version = "0.15.2",  optional = true}
csgrs-local = { package = "csgrs", path = "/home/wink/data/prgs/rust/forks/csgrs", optional = true}
csgrs-git = { package = "csgrs", git = "https://github.com/winksaville/csgrs.git", optional = true}

nalgebra = "0.33.2"
